--- a/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -18,7 +18,11 @@
 -->
 <resources>
     <bool name="def_accelerometer_rotation">true</bool>
+
+    <bool name="def_screen_brightness_automatic_mode">true</bool>
+
     <!-- Comma-separated list of bluetooth, wifi, and cell. -->
     <string name="def_airplane_mode_radios" translatable="false">cell,bluetooth,wifi</string>
+
     <integer name="def_screen_off_timeout">30000</integer>
 </resources>
